@@ -87,6 +87,8 @@ It can also be useful if you want to trigger a recursive delivery and then ensur
         <td>No. Defaults to ${ivy.deliver.ivy.pattern}</td></tr>
     <tr><td>pubrevision</td><td>the revision to use for the publication</td>
         <td>No. Defaults to ${ivy.deliver.revision} if set, or the revision resolved if set, or a timestamp</td></tr>
+    <tr><td>pubbranch</td><td>the branch to use for the publication</td>
+        <td>No. Defaults to ${ivy.deliver.branch} if set, or the branch resolved if set, or nothing (branch info won't be updated)</td></tr>
     <tr><td>pubdate</td><td>the publication date to use for the publication. This date should be either 'now', or a date given with the following pattern: yyyyMMddHHmmss</td>
         <td>No. Defaults to 'now'</td></tr>
     <tr><td>status</td><td>the status to use for the publication</td>
